--- a/VY.TestApi.Aplication.WebApi/VY.TestApi.Aplication.WebApi.csproj
+++ b/VY.TestApi.Aplication.WebApi/VY.TestApi.Aplication.WebApi.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VY.TestApi.Busines.Impl\VY.TestApi.Busines.Impl.csproj" />
+  </ItemGroup>
+
 </Project>
