--- a/VY.TestApi.Busines.Contracts/VY.TestApi.Busines.Contracts.csproj
+++ b/VY.TestApi.Busines.Contracts/VY.TestApi.Busines.Contracts.csproj
@@ -17,4 +17,12 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VY.TestApi.Dtos\VY.TestApi.Dtos.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
